--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,18 +2,33 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  labels:
+    app: nginx-custom
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-custom
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-custom
     spec:
       containers:
-      - name: nginx
-        image: tabbu93/nginx-custom:v1 # this gets updated by the pipeline
-        ports:
-        - containerPort: 80
+        - name: nginx-container
+          image: tabbu93/nginx-custom:latest
+          ports:
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: LoadBalancer  # Change to ClusterIP or NodePort based on your needs
+  selector:
+    app: nginx-custom
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
