--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,10 +24,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # or "elb" for classic
 spec:
-  type: LoadBalancer  # Change to ClusterIP or NodePort based on your needs
+  type: LoadBalancer
   selector:
-    app: nginx-custom
+    app: nginx
   ports:
     - protocol: TCP
       port: 80
