--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: project4-deployment
   labels:
-    app: nginx-custom
+    app: project4
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: nginx-custom
+      app: project4
   template:
     metadata:
       labels:
-        app: nginx-custom
+        app: project4
     spec:
       containers:
-        - name: nginx-container
-          image: tabbu93/nginx-custom:latest
-          ports:
-            - containerPort: 80
+      - name: project4
+        image: harishgorla5/project4:latest
+        ports:
+        - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # or "elb" for classic
+  name: project4-service
 spec:
   type: LoadBalancer
   selector:
-    app: nginx
+    app: project4
   ports:
     - protocol: TCP
       port: 80
